--- a/hort_parts/templates/hort_parts/product/product_detail.html
+++ b/hort_parts/templates/hort_parts/product/product_detail.html
@@ -76,7 +76,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible0.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big2.jpg"
@@ -84,14 +84,14 @@
                                        class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible.jpg" alt=""/>
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg" alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big3.jpg"
                                        data-zoom-image="assets/images/product-detail-page/camelia-reversible-big3.jpg"
                                        class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible6.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible7-big.jpg"
@@ -99,7 +99,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible7.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big4.jpg"
@@ -107,7 +107,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="0" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible8.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big5.jpg"
@@ -115,7 +115,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="1" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible9.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big6.jpg"
@@ -123,7 +123,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="2" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible1.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big7.jpg"
@@ -131,7 +131,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="3" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible2.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big8.jpg"
@@ -139,7 +139,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="4" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible3.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big9.jpg"
@@ -147,7 +147,7 @@
                                        class="slick-slide slick-cloned" data-slick-index="5" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible4.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                     <a data-image="assets/images/product-detail-page/camelia-reversible-big10.jpg"
@@ -155,50 +155,27 @@
                                        class="slick-slide slick-cloned" data-slick-index="6" aria-hidden="true"
                                        tabindex="-1">
                                         <img class="blur-up lazyload"
-                                             src="assets/images/product-detail-page/camelia-reversible5.jpg"
+                                             src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                              alt=""/>
                                     </a>
                                 </div>
                             </div>
+
                             <div class="zoompro-wrap product-zoom-right pl-20">
                                 <div class="zoompro-span">
                                     <img class="blur-up lazyload zoompro"
-                                         data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                         data-zoom-image="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                          alt=""
-                                         src="assets/images/product-detail-page/camelia-reversible-big1.jpg"/>
-                                </div>
-                                <div class="product-labels"><span class="lbl on-sale">Sale</span><span
-                                        class="lbl pr-label1">new</span></div>
-                                <div class="product-buttons">
-                                    <a href="https://www.youtube.com/watch?v=93A2jOW5Mog" class="btn popup-video"
-                                       title="View Video"><i class="icon anm anm-play-r" aria-hidden="true"></i></a>
-                                    <a href="#" class="btn prlightbox" title="Zoom"><i
-                                            class="icon anm anm-expand-l-arrows" aria-hidden="true"></i></a>
+                                         src="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"/>
                                 </div>
                             </div>
                             <div class="lightboximages">
-                                <a href="assets/images/product-detail-page/camelia-reversible-big1.jpg"
+                                <a href="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                    data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big2.jpg"
+                                <a href="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                    data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big3.jpg"
+                                <a href="{% static 'photos/' %}{{ product.article.lower }}/1.jpg"
                                    data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible7-big.jpg"
-                                   data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big4.jpg"
-                                   data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big5.jpg"
-                                   data-size="1462x2048"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big6.jpg"
-                                   data-size="731x1024"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big7.jpg"
-                                   data-size="731x1024"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big8.jpg"
-                                   data-size="731x1024"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big9.jpg"
-                                   data-size="731x1024"></a>
-                                <a href="assets/images/product-detail-page/camelia-reversible-big10.jpg"
-                                   data-size="731x1024"></a>
                             </div>
 
                         </div>
